# tusk-gnome

./: .gitignore  LICENSE  Makefile  README.md  meson.build  meson_options.txt  run.py
.claude/commands/: draft.md  issue.md  milestone.md  release.md  sync-docs.md
.claude/skills/tusk-gnome-clean-run/: SKILL.md
.claude/skills/tusk-release/: SKILL.md
data/: io.tusk.Tusk.desktop  io.tusk.Tusk.gschema.xml  meson.build  xyz.shapemachine.tusk-gnome.desktop  xyz.shapemachine.tusk-gnome.gschema.xml  xyz.shapemachine.tusk-gnome.metainfo.xml
docs/: features.md
packaging/aur/: PKGBUILD
packaging/flatpak/: _tmp_xyz.shapemachine.tusk-gnome.json  xyz.shapemachine.tusk-gnome.json
packaging/rpm/: tusk-gnome.spec.in
scripts/: release.sh
src/: activity_panel.py  application.py  aws_discovery.py  aws_discovery_dialog.py  azure_discovery.py  azure_discovery_dialog.py  col_stats_dialog.py  column_dialogs.py  command_palette.py  config.py  config.py.in  connection_dialog.py  connections.py  connections_import_dialog.py  data_grid.py  db_browser.py  explain_graph.py  file_explorer.py  function_editor.py  gcp_discovery.py  gcp_discovery_dialog.py  main.py  meson.build  pg_errors.py  pgpass_dialog.py  prefs.py  prefs_dialog.py  role_panel.py  row_edit_dialog.py  sponsor_dialog.py  sql_editor.py  stale_dialog.py  style.py  table_panel.py  table_view.py  tags_dialog.py  tunnel.py  tusk.in  window.py
