install_data(
  'io.tusk.Tusk.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.tusk.Tusk.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

install_data(
  'icons/hicolor/scalable/apps/io.tusk.Tusk.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
