install_data(
  'xyz.shapemachine.tusk-gnome.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'xyz.shapemachine.tusk-gnome.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

install_data(
  'icons/hicolor/scalable/apps/xyz.shapemachine.tusk-gnome.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
